changed response structure for paginated api